# rs-voice-assistant

./: .gitignore  Cargo.toml  README.md  text.txt
core/: Cargo.toml
core/cli/: Cargo.toml
core/cli/src/: main.rs
core/common/: Cargo.toml
core/common/src/: assistant.rs  lib.rs
core/lib/: Cargo.toml  build.rs
core/lib/src/: lib.rs
core/lib/src/voskapi/: log.rs  mod.rs  models.rs
core/lib/src/voskapi/recognition/: mod.rs  results.rs
libs/libvosk/x86_64-linux/: vosk-api.sh
models/: build-model.sh
src/: lib.rs  main.rs
src/include/: mod.rs
src/include/voskapi/: log.rs  mod.rs  models.rs
src/include/voskapi/recognition/: mod.rs  results.rs
