[package]
name = "july-lib"
version = "0.1.0"
edition = "2021"
links = "libvosk"
build = "build.rs"

[target.x86_64-pc-windows-msvc.libvosk]
rustc-link-search = ["../libs/libvosk/x86_64-windows"]
rustc-link-lib = [":libvosk.lib"]

[target.x86_64-unknown-linux-gnu.libvosk]
rustc-link-search = ["../libs/libvosk/x86_64-linux"]
rustc-link-lib = [":libvosk.so"]

[dependencies]
vosk-sys = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
cpal = "0.14.0"
dasp = "0.11"